Fixed Resizer making page stretch Fixed Css for the menu

--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -438,7 +438,6 @@ a.variable:hover {
 }
 
 .menu {
-  padding-left: 30px;
   padding-right: 10px;
   box-sizing: border-box;
   width: 100%;
